--- a/src/components/icon/icon.css
+++ b/src/components/icon/icon.css
@@ -6,9 +6,9 @@
   font-weight: 400;
   src: local('Material Icons'),
     local('MaterialIcons-Regular'),
-    url(styles/fonts/MaterialIcons/MaterialIcons-Regular.woff2) format('woff2'),
-    url(styles/fonts/MaterialIcons/MaterialIcons-Regular.woff) format('woff'),
-    url(styles/fonts/MaterialIcons/MaterialIcons-Regular.ttf) format('truetype');
+    url(./fonts/MaterialIcons/MaterialIcons-Regular.woff2) format('woff2'),
+    url(./fonts/MaterialIcons/MaterialIcons-Regular.woff) format('woff'),
+    url(./fonts/MaterialIcons/MaterialIcons-Regular.ttf) format('truetype');
 }
 
 @font-face {
