--- a/src/components/skeleton/skeleton.css
+++ b/src/components/skeleton/skeleton.css
@@ -2,7 +2,7 @@
   border-radius: 50%;
 }
 
-.card {
+.paper {
   background-color: #fff;
   border: 1px solid var(--color-grey-platinum);
   border-radius: 3px;
